# merina

./: .gitignore  API_DOCS.md  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  test.txt
config/: base.toml  development.toml  production.toml  test.toml
data-processing-platform/: .gitignore  Cargo.toml  README.md
data-processing-platform/config/: default.toml
data-processing-platform/migrations/: 00001_create_tables.down.sql  00001_create_tables.up.sql
data-processing-platform/src/: main.rs
data-processing-platform/src/config/: mod.rs
data-processing-platform/src/database/: mod.rs
data-processing-platform/src/datafusion/: mod.rs
data-processing-platform/src/errors/: mod.rs
data-processing-platform/src/handlers/: auth.rs  datafusion.rs  mod.rs  permission.rs  user.rs
data-processing-platform/src/middleware/: mod.rs
data-processing-platform/src/models/: mod.rs
data-processing-platform/src/routes/: mod.rs
data-processing-platform/src/services/: casbin_service.rs  mod.rs
data-processing-platform/src/utils/: mod.rs
migrations/: 001_casbin_rules_table.sql
src/: main.rs
src/config/: mod.rs
src/datafusion_adapters/: data_source.rs  flight_server.rs  mod.rs  query_engine.rs
src/handlers/: auth.rs  casbin.rs  data_source.rs  health.rs  mod.rs  query.rs
src/middleware/: auth.rs  cors.rs  mod.rs
src/services/: casbin_service.rs
src/utils/: auth.rs  mod.rs
