[package]
name = "modern-data-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["cors"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }

# Authentication & Authorization
jsonwebtoken = "9.2"
oauth2 = "4.4"
casbin = { version = "2.1", features = ["runtime-async-std"] }
casbin-sqlx-adapter = { version = "0.3", features = ["postgres"] }

# Data processing
datafusion = { version = "40.0", features = ["parquet", "json", "crypto_expressions", "regex_expressions"] }
arrow = "52.2"
arrow-flight = "52.2"
adbc = "0.9"
parquet = "52.2"

# Iceberg support
iceberg-rust = "0.6"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"
csv = "1.0"
tokio-util = "0.7"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tonic = { version = "0.12", features = ["tls"] }