[package]
name = "data-processing-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid"] }
casbin = { version = "2.0", features = ["runtime-async", "incremental"] }
oauth2 = "4.0"
jsonwebtoken = "9.2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["cors"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
datafusion = "37.0"
arrow = "52.0"
arrow-flight = "52.0"
arrow-schema = "52.0"
adbc-flight-sql = "0.8"
tokio-postgres = "0.7"
tokio-util = "0.7"
futures = "0.3"
regex = "1.0"
lazy_static = "1.4"
